--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,36 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-4">
+    <h3><%= @place.name %></h3>
+    <p>
+      <strong>Address</strong>
+      <%= @place.address %>
+    </p>
+    <p>
+      <strong>Phone</strong>
+      <%= @place.phone %>
+    </p>
+    <p>
+      <strong>Website</strong>
+      <%= @place.website %>
+    </p>
+    <p>
+      <strong>Description</strong>
+      <%= @place.description %>
+    </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @place.name %>
-</p>
+    <div id="map-canvas" style="width: 100%; height: 230px;"></div>
+  </div>
 
-<p>
-  <strong>Address:</strong>
-  <%= @place.address %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @place.description %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @place.phone %>
-</p>
-
-<p>
-  <strong>Website:</strong>
-  <%= @place.website %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @place.user_id %>
-</p>
-
-<div id="map-canvas" style="width: 230px; height: 230px;"></div>
+  <div class="cold-md-8">
+    <h3>Reviews by People</h3>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_place_path(@place) %> |
 <%= link_to 'Back', places_path %>
