--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -21,8 +21,14 @@
     <div id="map-canvas" style="width: 100%; height: 230px;"></div>
   </div>
 
-  <div class="cold-md-8">
+  <div class="col-md-8">
     <h3>Reviews by People</h3>
+    <% if current_user %>
+      <h5>New Review</h5>
+      <%= render 'reviews/form' %>
+    <% end %>
+    <h5>All Reviews</h5>
+    <%= render @reviews %>
   </div>
 </div>
 
