--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,5 @@
 <p>
 <%= gravatar_tag review.user.email, size: 20 %>
 <%= review.content %> by <%= review.user.name %>
+<div class="score_<%= review.id %>"></div>
 </p>
