--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -19,7 +19,7 @@
       <tbody>
         <% @places.each do |place| %>
         <tr>
-          <td><%= place.name %></td>
+          <td><%= link_to place.name, place_path(place) %></td>
           <td><%= time_ago_in_words(place.created_at) %></td>
           <td>
             <%= link_to "Edit", edit_place_path(place) %> |
@@ -47,7 +47,7 @@
       <tbody>
         <% @reviews.each do |review| %>
         <tr>
-          <td><%= review.place.name %></td>
+          <td><%= link_to review.place.name, place_path(review.place) %></td>
           <td><%= time_ago_in_words(review.created_at) %></td>
           <td>
             <div class="score_<%= review.id %>"></div>
